# SimNow_QuantitativeTrading

./: CMakeLists.txt  README.md  readme.md
include/core/CTP_Gateway/: ctp_md_adapter.h  ctp_trader_adapter.h
include/core/market_engine/: bar_generator.h  tick_processor.h
include/core/strategy_engine/: strategy_loader.h
src/: main.cpp
src/core/CTP_Gateway/: ctp_md_adapter.cpp  ctp_trader_adapter.cpp
src/core/market_engine/: bar_generator.cpp  tick_processor.cpp
src/core/strategy_engine/: strategy_loader.cpp
